--- a/index.html
+++ b/index.html
@@ -240,7 +240,9 @@
 
     <!-- Contact -->
     <section class="page-section--grey page-section--pd80">
-
+      <div class="contacts container">
+        <h2 class="title q-and-a__title">Вопрос-ответ</h2>
+      </div>
     </section>
 
   </main>
@@ -261,15 +263,15 @@
           </nav>
 
           <div class="page-footer__contact">
-            <a href="#"><img src="./Image/contact/vk.svg" alt="VK" class="contact-img"></a>
+            <a href="#"><img src="./Image/contact/vk.svg" alt="VK" class="page-footer__contact-icon"></a>
 
-            <a href="#"><img src="./Image/contact/youtube.svg" alt="YouTube" class="contact-img"></a>
+            <a href="#"><img src="./Image/contact/youtube.svg" alt="YouTube" class="page-footer__contact-icon"></a>
 
-            <a href="#"><img src="./Image/contact/twitter.svg" alt="Twitter" class="contact-img"></a>
+            <a href="#"><img src="./Image/contact/twitter.svg" alt="Twitter" class="page-footer__contact-icon"></a>
 
-            <a href="#"><img src="./Image/contact/facebook.svg" alt="Facebook" class="contact-img"></a>
+            <a href="#"><img src="./Image/contact/facebook.svg" alt="Facebook" class="page-footer__contact-icon"></a>
 
-            <a href="#"><img src="./Image/contact/instagram.svg" alt="Instagram" class="contact-img"></a>
+            <a href="#"><img src="./Image/contact/instagram.svg" alt="Instagram" class="page-footer__contact-icon"></a>
           </div>
         </div>
       </div>
