Не доделала, просто залила, т.к. на перерыв ухожу

--- a/index.html
+++ b/index.html
@@ -240,8 +240,51 @@
 
     <!-- Contact -->
     <section class="page-section--grey page-section--pd80">
-      <div class="contacts container">
-        <h2 class="title q-and-a__title">Вопрос-ответ</h2>
+      <div class="feedback container">
+        <h2 class="title feedback__ttitle">Связаться с нами</h2>
+        <div class="feedback__grid">
+          <div class="feedback__contacts">
+            <div class="feedback__contacts-item">
+              <p class="feedback__text--bold">Юридический адрес:</p>
+              <p class="feedback__text">197198, город Санкт-Петербург, Ропшинская улица,дом 1/32 литер а, помещение 10 офис 79</p>
+            </div>
+
+            <div class="feedback__contacts-item">
+              <p class="feedback__text--bold">Для вопросов и предложений:</p>
+              <p class="feedback__text"><a href="mailto: foxgamestudio@gmail.com">foxgamestudio@gmail.com</a></p>
+            </div>
+
+            <div class="feedback__contacts-item">
+              <p class="feedback__text--bold">Для ваших резюме:</p>
+              <p class="feedback__text"><a href="mailto: foxgamestudio_hr@gmail.com">foxgamestudio_hr@gmail.com</a></p>
+            </div>
+
+            <div class="feedback__contacts-item">
+              <p class="feedback__text--bold">Мы в социальных сетях:</p>
+              <div class="feedback__social-media">
+                <a href="#"><img src="./Image/contact/vk_color.svg" alt="VK" class="feedback__social-media-icon"></a>
+
+                <a href="#"><img src="./Image/contact/youtube_color.svg" alt="YouTube" class="feedback__social-media-icon"></a>
+
+                <a href="#"><img src="./Image/contact/twitter_color.svg" alt="Twitter" class="feedback__social-media-icon"></a>
+
+                <a href="#"><img src="./Image/contact/facebook_color.svg" alt="Facebook" class="feedback__social-media-icon"></a>
+
+                <a href="#"><img src="./Image/contact/instagram_color.svg" alt="Instagram" class="feedback__social-media-icon"></a>
+              </div>
+            </div>
+          </div>
+
+
+            <form action="#" class="form feedback__form">
+              <legend class="feedback__text--bold">Для обратной связи</legend>
+                <input type="text" placeholder="Ваше имя" class="form__input" required>
+                <input type="text" placeholder="Ваше e-mail" class="form__input" required>
+                <textarea class="form__textarea" placeholder="Ваше сообщение" ></textarea>
+
+                <button type="submit" class="button form__button">Отправить</button>
+            </form>
+        </div>
       </div>
     </section>
 
