Вроде норм, но я завтра еще посмотрю и подчищу какие-нибудь штуки

--- a/index.html
+++ b/index.html
@@ -214,20 +214,20 @@
             <input type="radio" name="acor" id="acor2" />
             <label for="acor2">Можно ли стримить ваши игры на YouTube/Twitch? </label>
             <div class="acor-body">
-                <p>Можно и даже нужно! Мы даже специально предусмотрели <a href="./article_16112023.html">партнёрскую программу</a> для контент-мейкеров. Присоединяйтесь!</p>
+                <p>Можно и даже нужно! Мы даже специально предусмотрели <a href="./article_16112023.html" class="link">партнёрскую программу</a> для контент-мейкеров. Присоединяйтесь!</p>
             </div>
             
             <input type="radio" name="acor" id="acor3" />
             <label for="acor3">Где можно приобрести ваши игры?</label>
             <div class="acor-body">
-                <p>Наши игры можно приобрести на различных доступных цифровых площадках: <a href="#">Steam</a>, <a href="#">Epic Games</a>, <a href="#">Origin</a>, <a href="#">Xbox Store</a>, <a href="#">PlayStation Store</a>, <a href="#">Google Play</a> и <a href="#">App Store</a>.
+                <p>Наши игры можно приобрести на различных доступных цифровых площадках: <a href="#" class="link">Steam</a>, <a href="#" class="link">Epic Games</a>, <a href="#" class="link">Origin</a>, <a href="#" class="link">Xbox Store</a>, <a href="#" class="link">PlayStation Store</a>, <a href="#" class="link">Google Play</a> и <a href="#" class="link">App Store</a>.
                 </p>
             </div> 
 
             <input type="radio" name="acor" id="acor4" />
             <label for="acor4">Над какими проектами сейчас работает студия?</label>
             <div class="acor-body">
-                <p>В настоящее время наша студия работает над двумя основными проектами: <a href="#">Magic Shop</a> и <a href="#">Reflection</a>. Но у нас еще много планов, так что следите за <a href="news.html">новостями</a>.</p>
+                <p>В настоящее время наша студия работает над двумя основными проектами: <a href="#" class="link">Magic Shop</a> и <a href="#" class="link">Reflection</a>. Но у нас еще много планов, так что следите за <a href="news.html" class="link">новостями</a>.</p>
             </div> 
             
           </div>
@@ -245,22 +245,22 @@
         <div class="feedback__grid">
           <div class="feedback__contacts">
             <div class="feedback__contacts-item">
-              <p class="feedback__text--bold">Юридический адрес:</p>
-              <p class="feedback__text">197198, город Санкт-Петербург, Ропшинская улица,дом 1/32 литер а, помещение 10 офис 79</p>
+              <p class="feedback__contacts-title text--bold">Юридический адрес:</p>
+              <p>197198, город Санкт-Петербург, Ропшинская улица,дом 1/32 литер а, помещение 10 офис 79</p>
             </div>
 
             <div class="feedback__contacts-item">
-              <p class="feedback__text--bold">Для вопросов и предложений:</p>
-              <p class="feedback__text"><a href="mailto: foxgamestudio@gmail.com">foxgamestudio@gmail.com</a></p>
+              <p class="feedback__contacts-title text--bold">Для вопросов и предложений:</p>
+              <p><a href="mailto: foxgamestudio@gmail.com" class="link">foxgamestudio@gmail.com</a></p>
             </div>
 
             <div class="feedback__contacts-item">
-              <p class="feedback__text--bold">Для ваших резюме:</p>
-              <p class="feedback__text"><a href="mailto: foxgamestudio_hr@gmail.com">foxgamestudio_hr@gmail.com</a></p>
+              <p class="feedback__contacts-title text--bold">Для ваших резюме:</p>
+              <p><a href="mailto: foxgamestudio_hr@gmail.com" class="link">foxgamestudio_hr@gmail.com</a></p>
             </div>
 
             <div class="feedback__contacts-item">
-              <p class="feedback__text--bold">Мы в социальных сетях:</p>
+              <p class="feedback__contacts-title text--bold">Мы в социальных сетях:</p>
               <div class="feedback__social-media">
                 <a href="#"><img src="./Image/contact/vk_color.svg" alt="VK" class="feedback__social-media-icon"></a>
 
@@ -277,7 +277,7 @@
 
 
             <form action="#" class="form feedback__form">
-              <legend class="feedback__text--bold">Для обратной связи</legend>
+              <legend class="feedback__contacts-title text--bold">Для обратной связи</legend>
                 <input type="text" placeholder="Ваше имя" class="form__input" required>
                 <input type="text" placeholder="Ваше e-mail" class="form__input" required>
                 <textarea class="form__textarea" placeholder="Ваше сообщение" ></textarea>
