--- a/article_05122023.html
+++ b/article_05122023.html
@@ -53,24 +53,24 @@
         <div class="container article">
           <h3 class="title article__title">Magic shop - старт публичного бета-теста</h3>
           <p class="article__date">5 декабря 2023</p>
-          <p class="article__text"><span class="article__text--bold">Magic Shop</span>, предстоящая фэнтезийная видеоигра, недавно открыла свои двери для жаждущих геймеров со всего мира для публичного бета-тестирования. С 10 по 23 декабря игроки могут погрузиться в этот завораживающий мир, полный волшебства и чудес, на популярной игровой платформе <a href="#" class="article__text--link">Steam</a>.</p>
+          <p class="article__text"><span class="text--bold">Magic Shop</span>, предстоящая фэнтезийная видеоигра, недавно открыла свои двери для жаждущих геймеров со всего мира для публичного бета-тестирования. С 10 по 23 декабря игроки могут погрузиться в этот завораживающий мир, полный волшебства и чудес, на популярной игровой платформе <a href="#" class="link">Steam</a>.</p>
           
-          <p class="article__text">В <span class="article__text--bold">Magic Shop</span>p игроки отправляются в увлекательное путешествие, взяв на себя роль начинающего волшебника, который натыкается на мистический магазин, спрятанный глубоко в шумном городе. Это необычное заведение хранит секреты, которые ждут, чтобы их раскрыли, пока игроки разгадывают его тайны и раскрывают свои магические способности.</p>
+          <p class="article__text">В <span class="text--bold">Magic Shop</span>p игроки отправляются в увлекательное путешествие, взяв на себя роль начинающего волшебника, который натыкается на мистический магазин, спрятанный глубоко в шумном городе. Это необычное заведение хранит секреты, которые ждут, чтобы их раскрыли, пока игроки разгадывают его тайны и раскрывают свои магические способности.</p>
 
-          <p class="article__text">В течение этого эксклюзивного периода тестирования участники получат доступ к различным ключевым игровым механикам <span class="article__text--bold">Magic Shop</span>. Они смогут исследовать замысловато спроектированную среду, наполненную яркими цветами и замысловатыми деталями, которые оживляют каждый уголок этого виртуального мира. От пыльных книжных полок, заставленных древними гримуарами, до сверкающих хрустальных бальных залов — каждое место предлагает уникальные впечатления, которые ждут своего открытия.</p>
+          <p class="article__text">В течение этого эксклюзивного периода тестирования участники получат доступ к различным ключевым игровым механикам <span class="text--bold">Magic Shop</span>. Они смогут исследовать замысловато спроектированную среду, наполненную яркими цветами и замысловатыми деталями, которые оживляют каждый уголок этого виртуального мира. От пыльных книжных полок, заставленных древними гримуарами, до сверкающих хрустальных бальных залов — каждое место предлагает уникальные впечатления, которые ждут своего открытия.</p>
 
           <p class="article__container-img">
             <img src="./Image/article_photo/photo_2023-12-19_16-50-36 1.jpg" alt="" class="article__img">
             <img src="./Image/article_photo/photo_2023-12-19_16-50-35 (2) 1.jpg" alt="" class="article__img">
           </p>
 
-          <p class="article__text">Одним из ключевых моментов, является захватывающая магическая система, встроенная в игровую механику <span class="article__text--bold">Magic Shop</span>. Имея в своем распоряжении огромный набор заклинаний — от манипуляции стихиями и телекинеза до создания иллюзий — игроки могут дать волю своему воображению и создавать мощные заклинания на протяжении всего своего приключения.    </p>
+          <p class="article__text">Одним из ключевых моментов, является захватывающая магическая система, встроенная в игровую механику <span class="text--bold">Magic Shop</span>. Имея в своем распоряжении огромный набор заклинаний — от манипуляции стихиями и телекинеза до создания иллюзий — игроки могут дать волю своему воображению и создавать мощные заклинания на протяжении всего своего приключения.</p>
 
           <p class="article__text">Отзывы игроков, полученные на этапе публичного бета-тестирования, служат бесценными данными для дальнейшего улучшения игровой механики, сглаживания любых потенциальных сбоев или ошибок, возникших во время тестирования, — все это способствует созданию исключительного конечного продукта после официального выпуска.</p>
 
-          <p class="article__text">Чтобы обеспечить максимальную удовлетворенность игроков даже во время периода бета-тестирования, мы создали специальный канал поддержки в <a href="#" class="article__text--link">Discord</a>, где участники могут делиться своим опытом, сообщать о любых возникших проблемах или давать ценные предложения для дальнейшего улучшения игрового процесса.</p>
+          <p class="article__text">Чтобы обеспечить максимальную удовлетворенность игроков даже во время периода бета-тестирования, мы создали специальный канал поддержки в <a href="#" class="link">Discord</a>, где участники могут делиться своим опытом, сообщать о любых возникших проблемах или давать ценные предложения для дальнейшего улучшения игрового процесса.</p>
 
-          <p class="article__text">Присоединяйтесь к публичному бета-тесту в <a href="#" class="article__text--link">Steam</a>!</p>
+          <p class="article__text">Присоединяйтесь к публичному бета-тесту в <a href="#" class="link">Steam</a>!</p>
         </div>
       </div>
     </section>
