--- a/article_29112023.html
+++ b/article_29112023.html
@@ -53,22 +53,22 @@
         <div class="container article">
           <h3 class="title article__title">reflection - старт закрытого бета-теста</h3>
           <p class="article__date">16 ноября 2023</p>
-          <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="article__text--bold">Reflection</span>.</p>
+          <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="text--bold">Reflection</span>.</p>
           
-          <p class="article__text">Игра <span class="article__text--bold">Reflection</span>, разработанная командой дальновидных создателей из Fox Game, бросает вызов традиционным концепциям захватывающего игрового процесса. Благодаря передовым технологиям и инновационному дизайну этот амбициозный проект призван стереть границы между виртуальностью и реальностью, как никогда раньше. </p>
+          <p class="article__text">Игра <span class="text--bold">Reflection</span>, разработанная командой дальновидных создателей из Fox Game, бросает вызов традиционным концепциям захватывающего игрового процесса. Благодаря передовым технологиям и инновационному дизайну этот амбициозный проект призван стереть границы между виртуальностью и реальностью, как никогда раньше. </p>
 
           <p class="article__text">На этапе закрытого бета-тестирования с ограниченным доступом удачливые участники получат исключительную возможность сформировать и усовершенствовать этот уникальный опыт. От вариантов настройки персонажа, которые идеально имитируют особенности реальной жизни, до замысловатых деталей ландшафтов, созданных специально для желаний каждого игрока — возможности кажутся безграничными.</p>
 
           <p><iframe width="754" height="427" src="https://www.youtube.com/embed/4Jd5Rgne8J0?si=JzFi855olcN7a9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="article__video"></iframe></p>
           
 
-          <p class="article__text">При первом знакомстве с <span class="article__text--bold">Reflection</span> открывается потрясающе реалистичная графика в сочетании с захватывающим звуковым оформлением — удовольствие для слуха в сочетании с захватывающими дух визуальными эффектами, тщательно разработанными талантливыми художниками Fox Game. В каждой сцене запечатлены даже мельчайшие детали — от солнечного света, пробивающегося сквозь листья в заколдованных лесах, до капель дождя, блестящих на городских улицах в сумерках.</p>
+          <p class="article__text">При первом знакомстве с <span class="text--bold">Reflection</span> открывается потрясающе реалистичная графика в сочетании с захватывающим звуковым оформлением — удовольствие для слуха в сочетании с захватывающими дух визуальными эффектами, тщательно разработанными талантливыми художниками Fox Game. В каждой сцене запечатлены даже мельчайшие детали — от солнечного света, пробивающегося сквозь листья в заколдованных лесах, до капель дождя, блестящих на городских улицах в сумерках.</p>
 
           <p class="article__text">Fox Game намерена использовать этап бета-тестирования, чтобы собрать бесценную обратную связь и убедиться, что конечный продукт превзойдет все ожидания. У игроков будет уникальная возможность внести непосредственный вклад в разработку игры, формируя ее будущее вместе с другими страстными энтузиастами.</p>
 
           <p class="article__text">Дополнительная информация о том, как заинтересованные геймеры могут принять участие в предстоящих этапах или получить доступ после официального релиза, будет распространена через официальные каналы Fox Game. Следите за новостями в наших социальных сетях.</p>
 
-          <p class="article__text"><a href="#" class="article__text--link">Страница проекта в Steam</a></p>
+          <p class="article__text"><a href="#" class="link">Страница проекта в Steam</a></p>
         </div>
       </div>
     </section>
