--- a/article_05122023.html
+++ b/article_05122023.html
@@ -9,8 +9,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/article.css">
+  <link rel="stylesheet" href="styles/fancybox.css">
+  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="styles/article.css">
 </head>
 <body>
   <!-- header -->
@@ -60,8 +61,9 @@
           <p class="article__text">В течение этого эксклюзивного периода тестирования участники получат доступ к различным ключевым игровым механикам <span class="text--bold">Magic Shop</span>. Они смогут исследовать замысловато спроектированную среду, наполненную яркими цветами и замысловатыми деталями, которые оживляют каждый уголок этого виртуального мира. От пыльных книжных полок, заставленных древними гримуарами, до сверкающих хрустальных бальных залов — каждое место предлагает уникальные впечатления, которые ждут своего открытия.</p>
 
           <p class="article__container-img">
-            <img src="./Image/article_photo/photo_2023-12-19_16-50-36 1.jpg" alt="" class="article__img">
-            <img src="./Image/article_photo/photo_2023-12-19_16-50-35 (2) 1.jpg" alt="" class="article__img">
+            <a href="Image/article_photo/article_1.jpg" data-fancybox="gallery"><img src="Image/article_photo/article_1.jpg" alt=""  class="article__img"></a>
+            
+            <a href="Image/article_photo/article_2.jpg" data-fancybox="gallery"><img src="Image/article_photo/article_2.jpg" alt="" class="article__img"></a>
           </p>
 
           <p class="article__text">Одним из ключевых моментов, является захватывающая магическая система, встроенная в игровую механику <span class="text--bold">Magic Shop</span>. Имея в своем распоряжении огромный набор заклинаний — от манипуляции стихиями и телекинеза до создания иллюзий — игроки могут дать волю своему воображению и создавать мощные заклинания на протяжении всего своего приключения.</p>
@@ -116,10 +118,12 @@
     </div>
   </footer>
 
-</body>
 
 <a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
 
-<script src="./js/backToTop.js"></script>
-
+<script src="js/backToTop.js"></script>
+<script src="js/fancybox.umd.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
+<script src="js/main.js"></script>
+</body>
 </html>
