добавлен скролл, подключила ссылки на других страничках (не все)

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <header class="page-header">
     <div class="container">
         <div class="page-header__row">
-            <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="page-header__logo">
+          <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo">
             <nav class="page-header__nav">
             <ul class="page-header__menu">
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Проекты</a></li>
-                <li><a href="#">Вопрос-ответ</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Новости</a></li>
+                <li><a href="#about">О нас</a></li>
+                <li><a href="#projects">Проекты</a></li>
+                <li><a href="#q-and-a">Вопрос-ответ</a></li>
+                <li><a href="#contacts">Контакты</a></li>
+                <li><a href="news.html">Новости</a></li>
                 <li><a href="#">Вакансии</a></li>
             </ul>
             </nav>
@@ -55,7 +55,7 @@
               <div class="title slider-block__title">Magic shop - <br>
               Старт пбт!</div>
               <p>Старт публичного бета-теста с 10 по 23 декабря. Не упустите возможность первым познакомиться с проектом!</p>
-              <a href="#" class="button slider-block__button">Узнать подробности</a>
+              <a href="article_magicShop.html" class="button slider-block__button">Узнать подробности</a>
             </div>
             <img src="image/main_fox_slide_MagicShop.png" alt="" class="slider-block__img">
           </li>
@@ -64,7 +64,7 @@
             <div class="slider-block__text">
               <div class="title slider-block__title">Партнерская программа для контент-мейкеров</div>
               <p>Станьте партнёром Fox Game и получайте ранний доступ к нашим играм!</p>
-              <a href="#" class="button slider-block__button">Узнать подробности</a>
+              <a href="article_program.html" class="button slider-block__button">Узнать подробности</a>
             </div>
             <img src="image/main_fox_slide_streamer.png" alt="" class="slider-block__img">
           </li>
@@ -75,7 +75,7 @@
     </div>
 
     <!-- about -->
-    <section class="page-section--grey page-section--pd80">
+    <section class="page-section--grey page-section--pd80" id="about">
       <div class="about container">
         <img src="./Image/about.png" alt="" class="about__img">
         <div class="about__text">
@@ -87,7 +87,7 @@
     </section>
 
     <!-- about project -->
-    <section class="page-section--pd80">
+    <section class="page-section--pd80" id="projects">
       <div class="about-project container">
         <h2 class="title about-project__title">Наши проекты</h2>
         <p>Приоритет нашей студии — качественный контент, многократно отмеченный экспертами и игроками. Мы специализируемся на создании неповторимой атмосферы, увлекательного геймплея, красочной графики и уникального игрового опыта.</p>
@@ -199,7 +199,7 @@
     </section>
 
     <!-- Q&A -->
-    <section class="page-section--pd80">
+    <section class="page-section--pd80" id="q-and-a">
       <div class="q-and-a container">
         <h2 class="title q-and-a__title">Вопрос-ответ</h2>
         <div class="q-and-a__content">
@@ -239,7 +239,7 @@
     </section>
 
     <!-- Contact -->
-    <section class="page-section--grey page-section--pd80">
+    <section class="page-section--grey page-section--pd80" id="contacts">
       <div class="feedback container">
         <h2 class="title feedback__ttitle">Связаться с нами</h2>
         <div class="feedback__grid">
@@ -329,7 +329,7 @@
   </footer> 
   <!-- END footer -->
 
-  <!-- якорь -->
+  <!-- наверх -->
   <a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
 
   <!-- scripts -->
