--- a/news.html
+++ b/news.html
@@ -23,16 +23,16 @@
 
         <div class="page-header__row">
 
-            <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="page-header__logo">
+            <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
 
             <nav class="page-header__nav">
 
             <ul class="page-header__menu">
-                <li><a href="#">О нас</a></li>
-                <li><a href="#">Проекты</a></li>
-                <li><a href="#">Вопрос-ответ</a></li>
-                <li><a href="#">Контакты</a></li>
-                <li><a href="#">Новости</a></li>
+                <li><a href="index.html#about">О нас</a></li>
+                <li><a href="index.html#projects">Проекты</a></li>
+                <li><a href="index.html#q-and-a">Вопрос-ответ</a></li>
+                <li><a href="index.html#contacts">Контакты</a></li>
+                <li><a href="news.html">Новости</a></li>
                 <li><a href="#">Вакансии</a></li>
             </ul>
 
@@ -144,7 +144,7 @@
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
-            <li><a href="#">Контакты</a></li>
+            <li><a href="index.html#contacts">Контакты</a></li>
             <li><a href="#">Политика конфиденциальности</a></li>
           </ul>
           </nav>
@@ -177,5 +177,6 @@
 
 <a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
 
-<script src="./js/backToTop.js"></script>
+<script src="js/backToTop.js"></script>
+<script src="js/main.js"></script>
 </html>
