--- a/article_program.html
+++ b/article_program.html
@@ -22,11 +22,11 @@
 
         <nav class="page-header__nav">
           <ul class="page-header__menu">
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Проекты</a></li>
-            <li><a href="#">Вопрос-ответ</a></li>
-            <li><a href="#">Контакты</a></li>
-            <li><a href="#">Новости</a></li>
+            <li><a href="index.html#about">О нас</a></li>
+            <li><a href="index.html#projects">Проекты</a></li>
+            <li><a href="index.html#q-and-a">Вопрос-ответ</a></li>
+            <li><a href="index.html#contacts">Контакты</a></li>
+            <li><a href="news.html">Новости</a></li>
             <li><a href="#">Вакансии</a></li>
           </ul>
         </nav>
@@ -89,7 +89,7 @@
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
-            <li><a href="#">Контакты</a></li>
+            <li><a href="index.html#contacts">Контакты</a></li>
             <li><a href="#">Политика конфиденциальности</a></li>
           </ul>
           </nav>
