Исправила пути картинок, делаю вакансии

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="page-header">
     <div class="container">
         <div class="page-header__row">
-          <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo">
+          <img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo">
             <nav class="page-header__nav">
             <ul class="page-header__menu">
                 <li><a href="#about">О нас</a></li>
@@ -47,7 +47,7 @@
               <p>Открыты вакансии на должность гейм-дизайнера, программиста С++ и другие. Успей подать свою заявку!</p>
               <a href="#" class="button slider-block__button">Узнать подробности</a>
             </div>
-            <img src="image/main_fox_slide_vacancy.png" alt="" class="slider-block__img">
+            <img src="Image/main_fox_slide_vacancy.png" alt="" class="slider-block__img">
           </li>
 
           <li class="swiper-slide slider-block">
@@ -57,7 +57,7 @@
               <p>Старт публичного бета-теста с 10 по 23 декабря. Не упустите возможность первым познакомиться с проектом!</p>
               <a href="article_magicShop.html" class="button slider-block__button">Узнать подробности</a>
             </div>
-            <img src="image/main_fox_slide_MagicShop.png" alt="" class="slider-block__img">
+            <img src="Image/main_fox_slide_MagicShop.png" alt="" class="slider-block__img">
           </li>
 
           <li class="swiper-slide slider-block">
@@ -66,7 +66,7 @@
               <p>Станьте партнёром Fox Game и получайте ранний доступ к нашим играм!</p>
               <a href="article_program.html" class="button slider-block__button">Узнать подробности</a>
             </div>
-            <img src="image/main_fox_slide_streamer.png" alt="" class="slider-block__img">
+            <img src="Image/main_fox_slide_streamer.png" alt="" class="slider-block__img">
           </li>
         </ul> 
 
@@ -296,7 +296,7 @@
       <div class="container">
         <div class="page-footer__row">
         
-          <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo">
+          <img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo">
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
