--- a/article_magicShop.html
+++ b/article_magicShop.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="page-header__row">
 
-        <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
+        <<a href="./index.html"><img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
 
         <nav class="page-header__nav">
           <ul class="page-header__menu">
@@ -42,7 +42,7 @@
       <div class="container">
         <div class="article-banner">
           <div class="article-banner__container">
-            <img src="./image/article_banner/magic_shop.jpg" alt="Reflection" class="article-banner__img">
+            <img src="./Image/article_banner/magic_shop.jpg" alt="Reflection" class="article-banner__img">
           </div>
             <div class="title article-banner__title">Magic shop - старт публичного бета-теста</div>
           </div>
@@ -86,7 +86,7 @@
       <div class="container">
         <div class="page-footer__row">
         
-          <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo"></a>
+          <a href="./index.html"><img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
