вроде закончила вакансии, подключила оставшиеся ссылки

--- a/article_magicShop.html
+++ b/article_magicShop.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="page-header__row">
 
-        <<a href="./index.html"><img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
+        <a href="./index.html"><img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-header__logo"></a>
 
         <nav class="page-header__nav">
           <ul class="page-header__menu">
@@ -28,7 +28,7 @@
             <li><a href="index.html#q-and-a">Вопрос-ответ</a></li>
             <li><a href="index.html#contacts">Контакты</a></li>
             <li><a href="news.html">Новости</a></li>
-            <li><a href="#">Вакансии</a></li>
+            <li><a href="article_vacancy.html">Вакансии</a></li>
           </ul>
         </nav>
       </div>
