--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#q-and-a">Вопрос-ответ</a></li>
                 <li><a href="#contacts">Контакты</a></li>
                 <li><a href="news.html">Новости</a></li>
-                <li><a href="#">Вакансии</a></li>
+                <li><a href="article_vacancy.html">Вакансии</a></li>
             </ul>
             </nav>
         </div>
@@ -45,7 +45,7 @@
             <div class="slider-block__text">
               <div class="title slider-block__title">Стань частью команды FOX Game!</div>
               <p>Открыты вакансии на должность гейм-дизайнера, программиста С++ и другие. Успей подать свою заявку!</p>
-              <a href="#" class="button slider-block__button">Узнать подробности</a>
+              <a href="article_vacancy.html" class="button slider-block__button">Узнать подробности</a>
             </div>
             <img src="Image/main_fox_slide_vacancy.png" alt="" class="slider-block__img">
           </li>
