--- a/news.html
+++ b/news.html
@@ -33,7 +33,7 @@
                 <li><a href="index.html#q-and-a">Вопрос-ответ</a></li>
                 <li><a href="index.html#contacts">Контакты</a></li>
                 <li><a href="news.html">Новости</a></li>
-                <li><a href="#">Вакансии</a></li>
+                <li><a href="article_vacancy.html">Вакансии</a></li>
             </ul>
 
             </nav>
