--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
             <form action="#" class="form feedback__form">
               <legend class="feedback__contacts-title text--bold">Для обратной связи</legend>
                 <input type="text" placeholder="Ваше имя" class="form__input" required>
-                <input type="text" placeholder="Ваш e-mail" class="form__input" required>
+                <input type="email" placeholder="Ваш e-mail" class="form__input" required>
                 <textarea class="form__textarea" placeholder="Ваше сообщение" ></textarea>
 
                 <button type="submit" class="button form__button">Отправить</button>
