--- a/article_program.html
+++ b/article_program.html
@@ -72,7 +72,7 @@
 
           <p class="article__text">Готовы к следующему уровню? Подайте заявку на участие в партнерской программе Fox Game для создателей контента — пришло время отправиться в незабываемое путешествие, где вдохновение встречается с инновациями! </p>
 
-          <p class="article__text"><span class="text--bold">Наш e-mail для ваших заявок:</span><a href="#" class="link">foxgamestudio@gmail.com</a></p>
+          <p class="article__text"><span class="text--bold">Наш e-mail для ваших заявок:</span><a href="mailto: foxgamestudio@gmail.com" class="link">foxgamestudio@gmail.com</a></p>
         </div>
       </div>
     </section>
