--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <input type="radio" name="acor" id="acor2" />
             <label for="acor2">Можно ли стримить ваши игры на YouTube/Twitch? </label>
             <div class="acor-body">
-                <p>Можно и даже нужно! Мы даже специально предусмотрели <a href="./article_16112023.html" class="link">партнёрскую программу</a> для контент-мейкеров. Присоединяйтесь!</p>
+                <p>Можно и даже нужно! Мы даже специально предусмотрели <a href="./article_program.html" class="link">партнёрскую программу</a> для контент-мейкеров. Присоединяйтесь!</p>
             </div>
             
             <input type="radio" name="acor" id="acor3" />
