--- a/article_vacancy.html
+++ b/article_vacancy.html
@@ -204,7 +204,7 @@
       <div class="container">
         <div class="page-footer__row">
         
-          <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo"></a>
+          <a href="./index.html"><img src="Image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo"></a>
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
