--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- about -->
     <section class="page-section--grey page-section--pd80" id="about">
       <div class="about container">
-        <img src="./Image/about.png" alt="" class="about__img">
+        <img src="./Image/about.png" alt="" width="480" height="480" class="about__img">
         <div class="about__text">
           <h2 class="title about__title">О нас</h2>
           <p>Мы - передовая и инновационная игровая студия, которая расширяет границы воображения. Мы верим в создание увлекательного опыта, который переносит игроков в захватывающие виртуальные миры, наполненные чудесами, волнением и бесконечными возможностями.</p>
@@ -240,7 +240,7 @@
             
           </div>
 
-          <img src="./Image/fox_q_a.jpg" alt=""  width="370" height="370">
+          <img src="./Image/fox_q_a.png" alt=""  width="370" height="370">
         </div>     
       </div>
 
