Сделала чуть покруче, добавила ховер для заголовка новостей

--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
       <div class="news-block">
           <img src="./Image/news_fox_team.png" alt="">
           <div class="news-block__text">
-            <div class="news-block__title">Стань частью команды Fox Game</div>
+            <div class="news-block__title"><a href="article_vacancy.html">Стань частью команды Fox Game</a></div>
             <p>Открыты вакансии на должность гейм-дизайнера, программиста С++ и другие. Успей по дать свою заявку</p>
             <a href="article_vacancy.html" class="button news-block__button">Подробнее</a>
             <div class="news-block__date">11 декабря 2023</div>
@@ -65,7 +65,7 @@
       <div class="news-block">
           <img src="./Image/news_fox_magic_shop.png" alt="">
           <div class="news-block__text">
-            <div class="news-block__title">Magic shop - старт пбт</div>
+            <div class="news-block__title"> <a href="article_magicShop.html">Magic shop - старт пбт</a> </div>
             <p>Старт публичного бета-теста с 10 по 23 декабря. Не упустите возможность первым познакомиться с проектом</p>
             <a href="article_magicShop.html" class="button news-block__button">Подробнее</a>
             <div class="news-block__date">5 декабря 2023</div>
@@ -77,7 +77,7 @@
           <img src="./Image/news_fox_stremer.png" alt="">
 
           <div class="news-block__text">
-              <div class="news-block__title">Партнерская программа для контент-мейкеров</div>
+              <div class="news-block__title"><a href="article_program.html">Партнерская программа для контент-мейкеров</a></div>
               <p>Станьте партнёром Fox Game и получайте ранний доступ к нашим играм</p>
               <a href="article_program.html" class="button news-block__button">Подробнее</a>
               <div class="news-block__date">29 ноября 2023</div>
@@ -89,7 +89,7 @@
       <div class="news-block">
           <img src="./Image/news_fox_reflection.png" alt="">
           <div class="news-block__text">
-            <div class="news-block__title">reflection - старт збт </div>
+            <div class="news-block__title"><a href="article_reflection.html">reflection - старт збт</a></div>
             <p>26 ноября стартовал закрытый бета-тест, который продлится до 10 декабря. Следите за новостями, чтобы не пропустить релиз проекта</p>
             <a href="article_reflection.html" class="button news-block__button">Подробнее</a>
             <div class="news-block__date">16 ноября 2023</div>
